--- a/Szyfry/Szyfry.csproj
+++ b/Szyfry/Szyfry.csproj
@@ -89,5 +89,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="IMG\error.png" />
+    <Content Include="IMG\HappyFace.jpg" />
+    <Content Include="IMG\UKW logo.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
